[package]
name = "hashit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hashit"
path = "src/lib.rs"

[[bin]]
name = "hashit"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
# Hashing algos
md5 = "0.7.0"